--- a/resources/main.css
+++ b/resources/main.css
@@ -11,7 +11,8 @@ body {
 #header {
   background-color: black;
   position: fixed;
-  width: 1500px;
+  width: 1200px;
+  border-bottom: 1px solid seashell;
 }
 
 #menu {
@@ -21,17 +22,30 @@ body {
 
 /* Middle Section of the Page */
 
+#background {
+
+}
+
 #mission {
   position: absolute;
   text-align: center;
+  background-color: black;
+  top: 300px;
+  width: 1200px;
+  vertical-align: center;
 }
 
-#main {
-  background-color: black;
-}
+/* Third Half of the Page */
 
 #month {
   width: 1000px;
+  align-content: center;
+}
+
+#firstpic {
+  width: 300px;
+  height: 200px;
+
 }
 
 #firstpic {
