--- a/resources/main.css
+++ b/resources/main.css
@@ -59,6 +59,7 @@ h3 {
 img.teapictures {
   width: 300px;
   height: 200px;
+  display: block;
 }
 
 .teas {
@@ -84,6 +85,8 @@ img.teapictures {
   background-color: black;
 }
 
+
+
 .locate {
   display: flex;
   flex-direction: column;
@@ -105,6 +108,9 @@ img.teapictures {
   width: 300px;
   text-align: center;
 }
+
+
+
 
 .location3 .text-content {
   width: 300px;
